--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev ./src/index.ts"
+    "start": "ts-node-dev ./index.ts"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +14,10 @@
     "@types/node": "^20.10.0",
     "chalk": "^4.1.2",
     "express": "^4.18.2",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "xterm": "^5.3.0"
   }
 }
